@@ -1,4 +1,4 @@
 Warning: variable '$data' not declared at byteconvert2.sl:9
 Warning: variable '$summer' not declared at byteconvert2.sl:11
 Warning: variable '$bytes' not declared at byteconvert2.sl:14
-The MD5 value of test.jar is: 052168a92bfc545941d9352b35288ac3
+The MD5 value of test.jar is: 395eb428fd8a80655a29c751f272bd37
