@@ -1,4 +1,4 @@
-(1) Digest value of test.jar is: 052168a92bfc545941d9352b35288ac3 good? yes
+(1) Digest value of test.jar is: 395eb428fd8a80655a29c751f272bd37 good? no
 (2) Another test of repacked data: good
-(3) Digest value of test.jar is: 052168a92bfc545941d9352b35288ac3 good? yes
-Digest of written data is: 052168a92bfc545941d9352b35288ac3
+(3) Digest value of test.jar is: 395eb428fd8a80655a29c751f272bd37 good? no
+Digest of written data is: 395eb428fd8a80655a29c751f272bd37
